# picochat

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  vocab.txt
runs/medium_llm_long_context/: events.out.tfevents.1782666984.Vrajs-MacBook-Pro.local.5107.0  events.out.tfevents.1782674648.Vrajs-MacBook-Pro.local.7752.0  events.out.tfevents.1782676436.Vrajs-MacBook-Pro.local.10607.0
runs/small_llm/: events.out.tfevents.1782628286.Vrajs-MacBook-Pro.local.15958.0  events.out.tfevents.1782628513.Vrajs-MacBook-Pro.local.16131.0
runs/small_llm_bf16/: events.out.tfevents.1782666260.Vrajs-MacBook-Pro.local.4354.0  events.out.tfevents.1782666363.Vrajs-MacBook-Pro.local.4421.0  events.out.tfevents.1782666381.Vrajs-MacBook-Pro.local.4449.0
runs/small_llm_compiled/: events.out.tfevents.1782628783.Vrajs-MacBook-Pro.local.16339.0  events.out.tfevents.1782628793.Vrajs-MacBook-Pro.local.16364.0
runs/small_llm_fixlr/: events.out.tfevents.1782629622.Vrajs-MacBook-Pro.local.17076.0  events.out.tfevents.1782665330.Vrajs-MacBook-Pro.local.2078.0  events.out.tfevents.1782665407.Vrajs-MacBook-Pro.local.2196.0  events.out.tfevents.1782665573.Vrajs-MacBook-Pro.local.2370.0  events.out.tfevents.1782665603.Vrajs-MacBook-Pro.local.2415.0
runs/small_llm_fixlr_1/: events.out.tfevents.1782665617.Vrajs-MacBook-Pro.local.2444.0
runs/small_llm_long_context/: events.out.tfevents.1782666472.Vrajs-MacBook-Pro.local.4647.0  events.out.tfevents.1782666628.Vrajs-MacBook-Pro.local.4835.0
runs/small_llm_long_context_compiled/: events.out.tfevents.1782666556.Vrajs-MacBook-Pro.local.4776.0
src/native/: __init__.py  bpe.cpp  main.cpp  tokenizer.cpp
src/native/include/: bpe.hpp  tokenizer.hpp
src/native/lib/ctre/: ctre-unicode.hpp
src/picochat/: __init__.py  model.py
